--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.7",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "flickity": "^3.0.0",
+    "motion": "^10.14.2"
   }
 }
